<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad1" />

        <RadioButton
            android:id="@+id/rad2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rad2" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="c1" />

    <CheckBox
        android:id="@+id/c2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="c2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <Button
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/verif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verif"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_gravity="center"/>
</LinearLayout>